Версия с открытым модальным окном, чтобы сделать скриншот страницы

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </header>
-        <div class="modal_container" id="add_detector_modal">
+        <div class="modal_container visible" id="add_detector_modal">
             <div class="modal">
                 <div class="modal__header">
                     <h2>Добавление нового датчика</h2>
